# flask-006-pl

./: .gitignore  README.rst  pyproject.toml
flask_006_pl/: db_schema.sql  flask_database.py  flaskapp.db  flaskapp.py  helpers.py  validation.py
flask_006_pl/static/: style.css
flask_006_pl/static/css/: styles.css
flask_006_pl/templates/: add_post.html  base.html  index.html  login.html  post.html  second.html  signup.html
tests/: test_flask_006_pl.py
